--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,3 +21,4 @@ recursive-include coldfront/plugins/allocation_removal_requests/templates *
 recursive-include coldfront/plugins/announcements/templates *
 recursive-include coldfront/plugins/help/templates *
 recursive-include coldfront/plugins/movable_allocations/templates *
+recursive-include coldfront/plugins/request_forms/templates *
